--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <nav>
     
     <ul>
-      <li><a href="./index.html">Home</a></li> 
-      <li><a href="./about.html">About Me</a></li> 
-      <li><a href="./project.html">Projects</a></li> 
-      <li><a href="./contact.html">Contact</a></li>
+      <li><a href="index.html">Home</a></li> 
+      <li><a href="about.html">About Me</a></li> 
+      <li><a href="project.html">Projects</a></li> 
+      <li><a href="contact.html">Contact</a></li>
     </ul>
     <div class="logo">Gradious</div>
   </nav>
@@ -24,7 +24,7 @@
 
   <div class="main">
     <div class="left">
-      <img src="./jk_image.jpg" alt="Profile Picture">
+      <img src="jk_image.jpg" alt="Profile Picture">
     </div>
     <div class="right">
       <h1>Hi, I am Jaya Krishna Sikhakolli</h1>
